objects/Dealer_Deprovision__c.object
<CustomObject>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HELMS</fullName>
                </value>
                <value>
                    <fullName>Dreamshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <label>Dealer Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check the records are processed or not</description>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogonId__c</fullName>
        <label>Logon Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Time__c</fullName>
        <label>Processed Time</label>
        <type>DateTime</type>
    </fields>
    <label>Staging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Dealer Deprovision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>